Task2_NGNIX/Scripts/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_ngnix1_name": {
            "defaultValue": "ngnix1",
            "type": "String"
        },
        "virtualMachines_ngnix2_name": {
            "defaultValue": "ngnix2",
            "type": "String"
        },
        "networkInterfaces_ngnix1497_name": {
            "defaultValue": "ngnix1497",
            "type": "String"
        },
        "networkInterfaces_ngnix2541_name": {
            "defaultValue": "ngnix2541",
            "type": "String"
        },
        "publicIPAddresses_ngnix1_ip_name": {
            "defaultValue": "ngnix1-ip",
            "type": "String"
        },
        "publicIPAddresses_ngnix2_ip_name": {
            "defaultValue": "ngnix2-ip",
            "type": "String"
        },
        "availabilitySets_availabilityset_name": {
            "defaultValue": "availabilityset",
            "type": "String"
        },
        "networkSecurityGroups_ngnix1_nsg_name": {
            "defaultValue": "ngnix1-nsg",
            "type": "String"
        },
        "virtualNetworks_Andrew_NGNIX_grp_vnet_name": {
            "defaultValue": "Andrew-NGNIX-grp-vnet",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "virtualMachines_ngnix1_id": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Compute/disks/ngnix1_OsDisk_1_e56e2f95ca704b89b0a4e34e5512a039",
            "type": "String"
        },
        "virtualMachines_ngnix2_id": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Compute/disks/ngnix2_OsDisk_1_71506c78fce34dc595cd800d210b59f0",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Compute/availabilitySets/availabilityset'.",
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Aligned"
            },
            "name": "[parameters('availabilitySets_availabilityset_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "scale": null,
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": [
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix2_name'))]"
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Compute/virtualMachines/ngnix1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_ngnix1_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "plan": {
                "name": "nginx-plus-q1fy17",
                "product": "nginx-plus-v1",
                "publisher": "nginxinc"
            },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "nginxinc",
                        "offer": "nginx-plus-v1",
                        "sku": "nginx-plus-q1fy17",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_ngnix1_name'),'_OsDisk_1_e56e2f95ca704b89b0a4e34e5512a039')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_ngnix1_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ngnix1_name')]",
                    "adminUsername": "andrew",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ngnix1497_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://mbdatasciencediag.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ngnix1497_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Compute/virtualMachines/ngnix2'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_ngnix2_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "plan": {
                "name": "nginx-plus-q1fy17",
                "product": "nginx-plus-v1",
                "publisher": "nginxinc"
            },
            "scale": null,
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_availabilityset_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_DS1"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "nginxinc",
                        "offer": "nginx-plus-v1",
                        "sku": "nginx-plus-q1fy17",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_ngnix2_name'),'_OsDisk_1_71506c78fce34dc595cd800d210b59f0')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_ngnix2_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ngnix2_name')]",
                    "adminUsername": "andrew",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ngnix2541_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://mbdatasciencediag.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_availabilityset_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ngnix2541_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/networkInterfaces/ngnix1497'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_ngnix1497_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8df53a69-9222-4c9d-8740-6a59f8f9da3e",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"53c75931-b2b7-4e08-bf2b-9d5b96d76791\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.3.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ngnix1_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "z0xfo3vhw1kupfbgcpba0twdkf.bx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-13-C3-0C",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ngnix1_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix1_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ngnix1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ngnix1_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/networkInterfaces/ngnix2541'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_ngnix2541_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "7c6db088-aef9-4402-8997-399dfa4df72a",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"09348c7e-d244-4f21-9878-d4a24c501ecb\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.3.1.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ngnix2_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "z0xfo3vhw1kupfbgcpba0twdkf.bx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-12-B5-E8",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ngnix1_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix2_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ngnix2_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ngnix1_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ngnix2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/networkSecurityGroups/ngnix1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_ngnix1_nsg_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "6f086cf0-f9d1-4af7-a19d-1c4cedd111a7",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"2be6b41c-9459-483f-95a3-0a97da7fb691\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/publicIPAddresses/ngnix1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_ngnix1_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "cf65df57-0278-4218-a96c-7b84ac05d0e5",
                "ipAddress": "40.121.196.90",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/publicIPAddresses/ngnix2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_ngnix2_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "384765f8-8779-47ad-9c7d-f077c7ac6cfc",
                "ipAddress": "52.191.197.59",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/virtualNetworks/Andrew-NGNIX-grp-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "7657aece-b6a7-47d5-9426-13c20d4ec355",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.3.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"a70e10de-0834-4b41-a639-95dfc59c18e3\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.3.1.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/networkSecurityGroups/ngnix1-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_ngnix1_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ngnix1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-NGNIX-grp/providers/Microsoft.Network/virtualNetworks/Andrew-NGNIX-grp-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.3.1.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Andrew_NGNIX_grp_vnet_name'))]"
            ]
        }
    ]
}
